fixed z-index

--- a/style.css
+++ b/style.css
@@ -41,6 +41,7 @@ header {
     padding: 13px 30px;
     position: sticky;
     top: 0;
+    z-index: 1000;
 }
 
 #nav-links {
